feat: add Docker and service management with port configuration updates

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,39 @@
 python-dotenv
 fastapi[all]
 uvicorn
-pipecat-ai[daily,elevenlabs,openai,silero,google]
+pipecat-ai[daily,elevenlabs,openai,silero,google,cartesia]
+
+aiortc==1.11.0
+cartesia==2.0.5
+daily-python==0.19.3
+deepgram-sdk==4.1.1
+email-validator==2.2.0
+fastapi-cli==0.0.7
+google-cloud-speech==2.31.1
+google-cloud-texttospeech==2.25.1
+google-genai==1.7.0
+google-generativeai==0.8.5
+gradio==5.29.0
+grpcio-status==1.71.0
+h2==4.2.0
+httptools==0.6.4
+importlib-metadata==8.0.0
+ipykernel==6.29.5
+itsdangerous==2.2.0
+jaraco.collections==5.1.0
+langchain-community==0.3.26
+langchain-openai==0.3.16
+langchain-qdrant==0.2.0
+langgraph==0.4.2
+matplotlib==3.10.3
+onnxruntime==1.20.1
+opencv-python==4.11.0.86
+pip-chill==1.0.3
+pipecat-ai==0.0.73
+pydantic-extra-types==2.10.4
+pymupdf==1.25.5
+scikit-learn==1.7.0
+tomli==2.0.1
+ujson==5.10.0
+uvloop==0.21.0
+watchfiles==1.0.5
